# SnowClassroom

./: .gitignore  CMakeLists.txt  README.md
Source/: main.cpp
Source/Headers/: Log.hpp  XAudioRecord.cpp  XAudioRecord.h  XGdigrabScreen.cpp  XGdigrabScreen.h  XMediaEncode.cpp  XMediaEncode.h  XRtmp.cpp  XRtmp.h  test.cpp  test.h
